packages/platformos-mcp-supervisor/test/fixtures/broken-project/app/views/partials/errors/unused_params.liquid
{% doc %}
  @param used_param {string} This is used
  @param unused_param {string} This is never used
  @param another_unused {object} Also never used
{% enddoc %}
<p>{{ used_param }}</p>
